--- a/cpp01/ex04/Makefile
+++ b/cpp01/ex04/Makefile
@@ -1,4 +1,4 @@
-NAME		= phone_book
+NAME		= sed
 WFLAGS 		= -Wall -Werror -Wextra -Werror=unused-variable \
 			-Werror=unused-parameter -Werror=unused-function
 
