--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -1,7 +1,5 @@
 NAME		= horde
-WFLAGS 		= -Wall -Werror -Wextra -Werror=unused-variable \
-			-Werror=unused-parameter -Werror=unused-function
-
+WFLAGS 		= -Wall -Werror -Wextra
 CPPFLAGS	= -std=c++98 -O3 -I ./include/
 DEBUG_FLAGS =
 SOURCES		= $(wildcard ./src/*.cpp)
