remove unused funciton

--- a/cpp03/ex03/Makefile
+++ b/cpp03/ex03/Makefile
@@ -16,6 +16,10 @@ ifdef DEBUG
 		CPPFLAGS := $(subst -O3,,$(CPPFLAGS))
 endif
 
+ifdef REMOVE_STD
+		CPPFLAGS := $(subst -std=c++98,,$(CPPFLAGS))
+endif
+
 all: ./objs/ $(NAME)
 
 ./objs/:
