--- a/cpp06/ex02/Makefile
+++ b/cpp06/ex02/Makefile
@@ -4,7 +4,7 @@ CPPFLAGS	= -std=c++98 -O3 -I ./include/
 DEBUG_FLAGS =
 SOURCES		= $(wildcard ./src/*.cpp)
 SOURCES		:= $(patsubst ./src/%,%, $(SOURCES))
-OBJECTS		= $(addprefix ./objs/,$(SOURCES:.cpp=.o))
+OBJECTS		= $(addprefix ./.objs/,$(SOURCES:.cpp=.o))
 HEADERS 	= $(wildcard ./include/*.hpp)
 
 ifdef REMOVE_W_FLAGS
@@ -23,21 +23,21 @@ endif
 CYAN = \033[36m
 RESET = \033[0m
 
-all: ./objs/ $(NAME)
+all: ./.objs/ $(NAME)
 
-./objs/:
-	@mkdir ./objs/
+./.objs/:
+	@mkdir ./.objs/
 
 $(NAME): $(OBJECTS)
 	@printf "$(CYAN)Compiling...$(RESET)\n" 
 	@c++ $(CPPFLAGS) $(DEBUG_FLAGS) $(WFLAGS) $(OBJECTS) -o $(NAME)
 	@printf "$(CYAN)Target ./$(NAME) done$(RESET)\n" 
 
-./objs/%.o: ./src/%.cpp $(HEADERS)
+./.objs/%.o: ./src/%.cpp $(HEADERS)
 	@c++ $(CPPFLAGS) $(DEBUG_FLAGS) $(WFLAGS) -c $< -o $@
 
 clean:
-	@rm -rf ./objs/
+	@rm -rf ./.objs/
 
 fclean: clean
 	@rm -rf $(NAME)
